Use VarHandles instead of Unsafe for volatile array accesses.